--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\Data.cs" />
+    <Compile Include="DALCliente.cs" />
     <Compile Include="DALFuncionario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
